Added Insta Section

--- a/components/index.html
+++ b/components/index.html
@@ -57,6 +57,7 @@
             <a href="#menu">Menu</a>
             <a href="#header-bar">Header bar</a>
             <a href="#work-project">Project Link</a>
+            <a href="#box-link">Box Link</a>
         <h3>Organisms</h3>
             <a href="#work-section">Work Section</a>  
             <a href="#prod-section">Production Section</a> 
@@ -700,6 +701,33 @@
             </div>
         </article>
 
+        <!-- Box Link -->
+
+        <article class="component">
+            <h3 class="component__name" id="box-link">Box Link</h3>
+            <div class="component__img">
+                    <img
+                    srcset="img-ref/homepage-production-link.png 2x"
+                    src="img-ref/homepage-production-link.png"
+                    alt="">
+            </div>
+            <div class="component__code">
+                
+                <div class="box-link">
+                    <div class="box-link__content">
+                        <h3 class="h-three h-three--red">Découvrir tous les projets</h3>
+                        <a class="button-container--inline-sm">
+                            <div class="button-shapes">
+                                <svg id="buttons-red--up-box-link" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 100">
+                                    <circle class="button-cream" cx="50" cy="50" r="49"/><polygon class="button-red" points="43.69 43.75 43.69 45.42 53.39 45.42 43.16 55.66 44.34 56.84 54.58 46.61 54.58 56.31 56.25 56.31 56.25 43.75 56.25 43.75 56.25 43.75 43.69 43.75"/></svg>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </article>
+
         <!-- Work Section -->
         
         <article class="component">
@@ -859,7 +887,7 @@
                             <figure class="compimg compimg--prod">
                                 <img class="img" src="../img/CANAM4-1024x576.jpg">
                                 <div class="compimg--hover">
-                                    <h2 class="h-two h-two--red">Can-Am</h2>
+                                    <a href="!#"><h2 class="h-two h-two--red">Can-Am</h2></a>
                                 </div>
                             </figure>
                             <figcaption class="img-caption--project">Digital</figcaption>
@@ -869,7 +897,7 @@
                             <figure class="compimg compimg--prod">
                                 <img class="img" src="../img/project-img-mr-store.png">
                                 <div class="compimg--hover">
-                                    <h2 class="h-two h-two--red">Mr Store</h2>
+                                    <a href="!#"><h2 class="h-two h-two--red">Mr Store</h2></a>
                                 </div>
                             </figure>
                             <figcaption class="img-caption--project">TV Prod</figcaption>
@@ -879,7 +907,7 @@
                             <figure class="compimg compimg--prod">
                                 <img class="img" src="../img/vlcsnap-2021-08-10-11h07m36s628-1024x576.png">
                                 <div class="compimg--hover">
-                                    <h2 class="h-two h-two--red">Vallée de la gastronomie</h2>
+                                    <a href="!#"><h2 class="h-two h-two--red">Vallée de la gastronomie</h2></a>
                                 </div>
                             </figure>
                             <figcaption class="img-caption--project">Digital</figcaption>
@@ -889,7 +917,7 @@
                             <figure class="compimg compimg--prod">
                                 <img class="img" src="../img/Montage-teaser-eolien20-1024x537.jpg">
                                 <div class="compimg--hover">
-                                    <h2 class="h-two h-two--red">Boralex</h2>
+                                    <a href="!#"><h2 class="h-two h-two--red">Boralex</h2></a>
                                 </div>
                             </figure>
                             <figcaption class="img-caption--project">Corporate</figcaption>
@@ -899,12 +927,23 @@
                             <figure class="compimg compimg--prod">
                                 <img class="img" src="../img/C021_ULTIMATE_V020-1024x560.jpg">
                                 <div class="compimg--hover">
-                                    <h2 class="h-two h-two--red">Ultimate</h2>
+                                    <a href="!#"><h2 class="h-two h-two--red">Ultimate</h2></a>
                                 </div>
                             </figure>
                             <figcaption class="img-caption--project">Digtal</figcaption>
                         </div>
 
+                    </div>
+                    <div class="box-link">
+                        <div class="box-link__content">
+                            <h3 class="h-three h-three--red">Découvrir tous les projets</h3>
+                            <a class="button-container--inline-sm">
+                                <div class="button-shapes">
+                                    <svg id="buttons-red--up-prod-box-link" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 100">
+                                        <circle class="button-cream" cx="50" cy="50" r="49"/><polygon class="button-red" points="43.69 43.75 43.69 45.42 53.39 45.42 43.16 55.66 44.34 56.84 54.58 46.61 54.58 56.31 56.25 56.31 56.25 43.75 56.25 43.75 56.25 43.75 43.69 43.75"/></svg>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </article>
             </div>
@@ -965,12 +1004,45 @@
             <h3 class="component__name" id="insta-section">Insta Section</h3>
             <div class="component__img">
                     <img
-                    srcset="img-ref/homepage-production.png 2x"
-                    src="img-ref/homepage-production.png"
-                    alt="">
+                    srcset="img-ref/homepage-insta.png 2x"
+                    src="img-ref/homepage-insta.png"
+                    alt="Insta Section">
             </div>
             <div class="component__code">
                 
+                <article class="section section--insta">
+                    <div class="content--insta">
+                        <h1 class="h-one h-one--red">Insta</h1>
+                        <figure class="compimg compimg--insta">
+                            <img class="img" src="../img/241702325_574550980647449_5311797978791950906_n.jpg">
+                        </figure>
+                        <figure class="compimg compimg--insta">
+                            <img class="img" src="../img/241702325_574550980647449_5311797978791950906_n.jpg">
+                        </figure>
+                        <figure class="compimg compimg--insta">
+                            <img class="img" src="../img/241702325_574550980647449_5311797978791950906_n.jpg">
+                        </figure>
+                        <figure class="compimg compimg--insta">
+                            <img class="img" src="../img/241702325_574550980647449_5311797978791950906_n.jpg">
+                        </figure>
+                        <figure class="compimg compimg--insta">
+                            <img class="img" src="../img/241702325_574550980647449_5311797978791950906_n.jpg">
+                        </figure>
+                        <figure class="compimg compimg--insta">
+                            <img class="img" src="../img/241702325_574550980647449_5311797978791950906_n.jpg">
+                        </figure>
+                        <figure class="compimg compimg--insta">
+                            <img class="img" src="../img/241702325_574550980647449_5311797978791950906_n.jpg">
+                        </figure>
+                        <figure class="compimg compimg--insta">
+                            <img class="img" src="../img/241702325_574550980647449_5311797978791950906_n.jpg">
+                        </figure>
+                        <figure class="compimg compimg--insta">
+                            <img class="img" src="../img/241702325_574550980647449_5311797978791950906_n.jpg">
+                        </figure>
+                    </div>
+                </article>                    
+
             </div>
         </article>
 
