--- a/css/main.css
+++ b/css/main.css
@@ -149,6 +149,11 @@ figure.compimg--insta img {
     gap: 1rem;
 }
 
+.compimg--hover a {
+    text-underline-offset: 0rem;
+    text-decoration: none;
+}
+
 .compimg--prod:hover .compimg--hover {
     opacity: 1;
 }
@@ -236,6 +241,8 @@ figcaption {
 
 .button-shapes {
     z-index: 1;
+    padding: 0;
+    margin: 0;
 }
 
 .button-container--inline-lg:hover, .button-container--inline-md:hover, .button-container--inline-sm:hover {
@@ -502,7 +509,7 @@ ul {
 }
 
 .table__img img{
-    z-index: 10;
+    z-index: 3;
     margin: auto;
     width: 100%;
 }
@@ -640,6 +647,38 @@ a.project--link:hover > .project-category--normal {
     display: none;
 } 
 
+/* Box Link */
+
+.box-link {
+    background-color: var(--color-cream);
+    color: var(--color-red);
+    width: 100%;
+    border: 2px solid var(--color-red);
+    border-bottom: none;
+    margin-bottom: -6rem;
+    padding: 2rem 3rem;
+    transition: margin-bottom 2s;
+    z-index: 1;
+}
+
+.box-link__content {
+    width: 100%;
+    height: 10rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.box-link a {
+    padding: 0;
+    margin: 0;
+}
+
+.box-link:hover {
+    margin-bottom: -4rem;
+}
+
 /* Work Section */
 
 .section--work {
@@ -691,8 +730,25 @@ a.project--link:hover > .project-category--normal {
     background-color: var(--color-red);
 }
 
+.section--agency {
+    z-index: 2;
+}
+
 .section--prod {
     background-color: var(--color-cream);
+    padding-bottom: 0;
+}
+
+.section--insta {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: flex-end;
+    padding: 0rem;
+    background: url(../img/sfsdfsdfsdf-1600x900.jpeg);
+    background-position: top;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .content {
@@ -704,6 +760,33 @@ a.project--link:hover > .project-category--normal {
 
 .content--agency, .content--awards {
     color: var(--color-black);
+}
+
+.content--insta {
+    width: 100%;
+    height: 268px;
+    display: grid;
+    grid-template-columns: repeat(12,268px);
+    grid-auto-columns: 268px;
+    grid-template-rows: 268px;
+    gap: 2rem;
+    overflow-x: scroll;
+    overflow-y: hidden;
+}
+
+.content--insta figure {
+    grid-column: span 1;
+}
+
+.content--insta h1 {
+    font-size: 16.45rem;
+    grid-column: span 3;
+    justify-self: start;
+    align-self: center;
+}
+
+.content--insta::-webkit-scrollbar {
+    display: none;
 }
 
 .content--agency .h-three, .content--agency .list--numbered {
@@ -742,10 +825,12 @@ a.project--link:hover > .project-category--normal {
 
 }
 
-.awards a {
+.section--awards a {
     padding-top: 3rem;
     text-align: center;
 }
+
+/* Production Section */
 
 .section--prod__grid {
     padding-top: 5rem;
