Added Trust Section

--- a/components/index.html
+++ b/components/index.html
@@ -1052,12 +1052,51 @@
             <h3 class="component__name" id="trust-section">Trust Section</h3>
             <div class="component__img">
                     <img
-                    srcset="img-ref/homepage-production.png 2x"
-                    src="img-ref/homepage-production.png"
-                    alt="">
+                    srcset="img-ref/homepage-trust.png 2x"
+                    src="img-ref/homepage-trust.png"
+                    alt="Trust Section">
             </div>
             <div class="component__code">
-                
+                <article class="section section--trust">
+                    <div class="content content--trust">
+                        <h3 class="h-three">Ils nous font confiance</h3>
+                        <div class="content__list--trust">
+                            <ul class="list--nonum">
+                                <li class="list-item list-item--nonum">
+                                    <h4 class="h-four h-four--red">Agence Service Plan</h4>
+                                    <figure class="compimg compimg--trust list__img">
+                                    <img class="img" src="../img/Logo-SERVICE-PLAN--480x48.png">
+                                    </figure>
+                                </li>
+                                <li class="list-item list-item--nonum">
+                                    <h4 class="h-four h-four--red">Sncf Réseau</h4>
+                                    <figure class="compimg compimg--trust list__img">
+                                        <img class="img" src="../img/Logo-SNCF-RESEAUX.png">
+                                    </figure>
+                                </li>
+                                <li class="list-item list-item--nonum">
+                                    <h4 class="h-four h-four--red">Nokia</h4>
+                                    <figure class="compimg compimg--trust list__img">
+                                        <img class="img" src="../img/Logo-nokia-3--480x270.png">
+                                    </figure>
+                                </li>
+                                <li class="list-item list-item--nonum">
+                                    <h4 class="h-four h-four--red">Boralex</h4>
+                                    <figure class="compimg compimg--trust list__img">
+                                        <img class="img" src="../img/Logo-boralex--480x121.png">
+                                    </figure>
+                                </li>
+                                <li class="list-item list-item--nonum">
+                                    <h4 class="h-four h-four--red">Agence Nouveau monde</h4>
+                                    <figure class="compimg compimg--trust list__img">
+                                        <img class="img" src="../img/logo_NM_noir-480x136.png">
+                                    </figure>
+                                </li>
+                            </ul>
+                            <a href="#!">Voir Plus</a>
+                        </div>
+                    </div>
+                </article>
             </div>
         </article>
 
