--- a/components/index.html
+++ b/components/index.html
@@ -712,19 +712,19 @@
                     alt="">
             </div>
             <div class="component__code">
-                
-                <div class="box-link">
-                    <div class="box-link__content">
-                        <h3 class="h-three h-three--red">Découvrir tous les projets</h3>
-                        <a class="button-container--inline-sm">
-                            <div class="button-shapes">
-                                <svg id="buttons-red--up-box-link" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 100">
-                                    <circle class="button-cream" cx="50" cy="50" r="49"/><polygon class="button-red" points="43.69 43.75 43.69 45.42 53.39 45.42 43.16 55.66 44.34 56.84 54.58 46.61 54.58 56.31 56.25 56.31 56.25 43.75 56.25 43.75 56.25 43.75 43.69 43.75"/></svg>
-                            </div>
-                        </a>
+                <div class="box-link--hider">
+                    <div class="box-link">
+                        <div class="box-link__content">
+                            <h3 class="h-three h-three--red">Découvrir tous les projets</h3>
+                            <a class="button-container--inline-sm">
+                                <div class="button-shapes">
+                                    <svg id="buttons-red--up-box-link" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 100">
+                                        <circle class="button-cream" cx="50" cy="50" r="49"/><polygon class="button-red" points="43.69 43.75 43.69 45.42 53.39 45.42 43.16 55.66 44.34 56.84 54.58 46.61 54.58 56.31 56.25 56.31 56.25 43.75 56.25 43.75 56.25 43.75 43.69 43.75"/></svg>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
-
             </div>
         </article>
 
@@ -934,15 +934,17 @@
                         </div>
 
                     </div>
-                    <div class="box-link">
-                        <div class="box-link__content">
-                            <h3 class="h-three h-three--red">Découvrir tous les projets</h3>
-                            <a class="button-container--inline-sm">
-                                <div class="button-shapes">
-                                    <svg id="buttons-red--up-prod-box-link" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 100">
-                                        <circle class="button-cream" cx="50" cy="50" r="49"/><polygon class="button-red" points="43.69 43.75 43.69 45.42 53.39 45.42 43.16 55.66 44.34 56.84 54.58 46.61 54.58 56.31 56.25 56.31 56.25 43.75 56.25 43.75 56.25 43.75 43.69 43.75"/></svg>
-                                </div>
-                            </a>
+                    <div class="box-link--hider">
+                        <div class="box-link">
+                            <div class="box-link__content">
+                                <h3 class="h-three h-three--red">Découvrir tous les projets</h3>
+                                <a class="button-container--inline-sm">
+                                    <div class="button-shapes">
+                                        <svg id="buttons-red--up-prod-box-link" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 100 100">
+                                            <circle class="button-cream" cx="50" cy="50" r="49"/><polygon class="button-red" points="43.69 43.75 43.69 45.42 53.39 45.42 43.16 55.66 44.34 56.84 54.58 46.61 54.58 56.31 56.25 56.31 56.25 43.75 56.25 43.75 56.25 43.75 43.69 43.75"/></svg>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </article>
@@ -1218,12 +1220,56 @@
             <h3 class="component__name" id="contact-section">Contact Section</h3>
             <div class="component__img">
                     <img
-                    srcset="img-ref/homepage-production.png 2x"
-                    src="img-ref/homepage-production.png"
-                    alt="">
+                    srcset="img-ref/homepage-contact.png 2x"
+                    src="img-ref/homepage-contact.png"
+                    alt="Contact Section">
             </div>
             <div class="component__code">
-                
+                <div class="section--hider">
+                    <article class="section section--contact">
+                        <div class="content content--contact">
+                            <h3 class="h-three--thin">Let’s talk about your project, we will <span style="font-weight: 700;">Compose It</span> for you.</h3>
+                            <a class="button-container--inline-lg">
+                                <div class="button-shapes button--arrow-rotate">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 200 200">
+                                        <circle class="button-cream--blk" cx="100" cy="100" r="99"/><polygon points="87.37 87.5 87.37 90.85 106.78 90.85 86.31 111.32 88.68 113.69 109.15 93.22 109.15 112.63 112.5 112.63 112.5 87.5 112.5 87.5 112.5 87.5 87.37 87.5"/></svg>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="content content--contact content--contact--block">
+                            <a href="tel:0629664445">
+                                <h1 class="h-one h-one--red" style="font-size: 7.5rem;">06.29.66.44.45</h1>
+                            </a>
+                            <a href="mailto:contact@composeitprod.com">
+                                <h1 class="h-one h-one--red" style="font-size: 3.5rem;">contact@composeitprod.com</h1>
+                            </a>
+                        </div>
+                        <div class="content content--footer">
+                            <a class="links__footer--text" href="https://composeitprod.fr/mentions-legales/">Mentions légales</a>
+                            <div class="content--social">
+                                <a class="links__footer" href="https://www.youtube.com/channel/UC3L3H5bDtKU9zjC-ZWStAEQ">
+                                    <svg role="img" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>YouTube</title><path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
+                                </a>
+                                <a class="links__footer" href="https://twitter.com/composeitprod">
+                                    <svg role="img" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Twitter</title><path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"/>
+                                    </svg>
+                                </a>
+                                <a class="links__footer" href="https://www.instagram.com/composeitprod">
+                                    <svg role="img" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Instagram</title><path d="M12 0C8.74 0 8.333.015 7.053.072 5.775.132 4.905.333 4.14.63c-.789.306-1.459.717-2.126 1.384S.935 3.35.63 4.14C.333 4.905.131 5.775.072 7.053.012 8.333 0 8.74 0 12s.015 3.667.072 4.947c.06 1.277.261 2.148.558 2.913.306.788.717 1.459 1.384 2.126.667.666 1.336 1.079 2.126 1.384.766.296 1.636.499 2.913.558C8.333 23.988 8.74 24 12 24s3.667-.015 4.947-.072c1.277-.06 2.148-.262 2.913-.558.788-.306 1.459-.718 2.126-1.384.666-.667 1.079-1.335 1.384-2.126.296-.765.499-1.636.558-2.913.06-1.28.072-1.687.072-4.947s-.015-3.667-.072-4.947c-.06-1.277-.262-2.149-.558-2.913-.306-.789-.718-1.459-1.384-2.126C21.319 1.347 20.651.935 19.86.63c-.765-.297-1.636-.499-2.913-.558C15.667.012 15.26 0 12 0zm0 2.16c3.203 0 3.585.016 4.85.071 1.17.055 1.805.249 2.227.415.562.217.96.477 1.382.896.419.42.679.819.896 1.381.164.422.36 1.057.413 2.227.057 1.266.07 1.646.07 4.85s-.015 3.585-.074 4.85c-.061 1.17-.256 1.805-.421 2.227-.224.562-.479.96-.899 1.382-.419.419-.824.679-1.38.896-.42.164-1.065.36-2.235.413-1.274.057-1.649.07-4.859.07-3.211 0-3.586-.015-4.859-.074-1.171-.061-1.816-.256-2.236-.421-.569-.224-.96-.479-1.379-.899-.421-.419-.69-.824-.9-1.38-.165-.42-.359-1.065-.42-2.235-.045-1.26-.061-1.649-.061-4.844 0-3.196.016-3.586.061-4.861.061-1.17.255-1.814.42-2.234.21-.57.479-.96.9-1.381.419-.419.81-.689 1.379-.898.42-.166 1.051-.361 2.221-.421 1.275-.045 1.65-.06 4.859-.06l.045.03zm0 3.678c-3.405 0-6.162 2.76-6.162 6.162 0 3.405 2.76 6.162 6.162 6.162 3.405 0 6.162-2.76 6.162-6.162 0-3.405-2.76-6.162-6.162-6.162zM12 16c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm7.846-10.405c0 .795-.646 1.44-1.44 1.44-.795 0-1.44-.646-1.44-1.44 0-.794.646-1.439 1.44-1.439.793-.001 1.44.645 1.44 1.439z"/>
+                                    </svg>
+                                </a>
+                                <a class="links__footer" href="https://www.facebook.com/composeitprod">
+                                    <svg role="img" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Facebook</title><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
+                                </a>
+                                <a class="links__footer" href="https://vimeo.com/composeitprod">
+                                    <svg role="img" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Vimeo</title><path d="M23.9765 6.4168c-.105 2.338-1.739 5.5429-4.894 9.6088-3.2679 4.247-6.0258 6.3699-8.2898 6.3699-1.409 0-2.578-1.294-3.553-3.881l-1.9179-7.1138c-.719-2.584-1.488-3.878-2.312-3.878-.179 0-.806.378-1.8809 1.132l-1.129-1.457a315.06 315.06 0 003.501-3.1279c1.579-1.368 2.765-2.085 3.5539-2.159 1.867-.18 3.016 1.1 3.447 3.838.465 2.953.789 4.789.971 5.5069.5389 2.45 1.1309 3.674 1.7759 3.674.502 0 1.256-.796 2.265-2.385 1.004-1.589 1.54-2.797 1.612-3.628.144-1.371-.395-2.061-1.614-2.061-.574 0-1.167.121-1.777.391 1.186-3.8679 3.434-5.7568 6.7619-5.6368 2.4729.06 3.6279 1.664 3.4929 4.7969z"/></svg>
+                                </a>
+                            </div>
+                            <a class="links__footer--text" href="https://composeitprod.fr/mentions-legales/">Merci Beaucoup.</a>
+                        </div>
+                    
+                    </article>
+                </div> 
             </div>
         </article>
 
