--- a/css/main.css
+++ b/css/main.css
@@ -400,6 +400,13 @@ h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase;
 }
 
+.h-three--thin {
+    color: var(--color-black);
+    font-size: var(--font-size-h3);
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
 .h-three--red {
     color: var(--color-red);
     font-weight: 400;
@@ -672,15 +679,24 @@ a.project--link:hover > .project-category--normal {
 
 /* Box Link */
 
+.box-link--hider {
+    height: 12rem;
+    overflow: hidden;
+    background-color: var(--color-cream);
+    margin-bottom: 0rem;
+}
+
+
 .box-link {
     background-color: var(--color-cream);
     color: var(--color-red);
     width: 100%;
     border: 2px solid var(--color-red);
     border-bottom: none;
-    margin-bottom: -6rem;
-    padding: 2rem 3rem;
-    transition: margin-bottom 2s;
+    position: relative;
+    bottom: -2rem;
+    padding: 1rem 3rem 4rem;
+    transition: bottom 2s;
     z-index: 1;
 }
 
@@ -699,7 +715,25 @@ a.project--link:hover > .project-category--normal {
 }
 
 .box-link:hover {
-    margin-bottom: -4rem;
+    bottom: 0rem;
+}
+
+/* Footer Links */
+
+.links__footer--text {
+    text-decoration: none;
+}
+
+.links__footer--text:hover {
+    color: var(--color-red);
+}
+
+.links__footer {
+    fill: var(--color-black);
+}
+
+.links__footer:hover {
+    fill: var(--color-red);
 }
 
 /* Work Section */
@@ -783,6 +817,30 @@ a.project--link:hover > .project-category--normal {
     background-repeat: no-repeat;
 }
 
+.section--hider {
+    width: 100%;
+    height: 75vh;
+    overflow: hidden;
+    background-color: var(--color-red);
+    margin-bottom: -7rem;
+}
+
+.section--contact {
+    background-color: var(--color-cream);
+    color: var(--color-red);
+    width: 100%;
+    border: 2px solid var(--color-black);
+    border-bottom: none;
+    position: relative;
+    bottom: -22rem;
+    transition: bottom 2s;
+    z-index: 1;
+}
+
+.section--contact:hover {
+    bottom: 0rem;
+}
+
 .content {
     display: flex;
     flex-direction: row;
@@ -824,6 +882,54 @@ a.project--link:hover > .project-category--normal {
 .content--trust {
     width: 100%;
     gap: 6rem;
+}
+
+.content--contact {
+    padding-top: 2rem;
+    padding-bottom: 4rem;
+    border-bottom: 1px solid var(--color-black);
+}
+
+.content--contact--block {
+    display: block;
+}
+
+.content--contact a {
+    padding: 0;
+    display: block;
+    text-decoration: none;
+}
+
+.content--contact a:hover {
+    padding: 0;
+}
+
+.content--contact h1:hover {
+    color: var(--color-cream);
+    -webkit-text-stroke: 2px var(--color-red);
+/*ref: https://css-tricks.com/adding-stroke-to-web-text/*/
+}
+
+.content--contact .button-container--inline-lg {
+    flex-basis: 20%;
+}
+
+.content--contact h3 {
+    flex-basis: 50%;
+}
+
+.content--footer {
+    width: 100%;
+}
+
+.content--social {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+.content--social svg{
+    height: 13px;
 }
 
 .content__list--trust ul {
