--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,9 @@
 html {
     box-sizing: border-box;
     font-size: 81.3%; /*13px*/
+    margin: 0px;
+    height: 100%;
+    width: 100%;
   }
 
   *, *:before, *:after {
@@ -49,6 +52,7 @@ body {
     line-height: 1.5;
     padding: 0;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 a {
@@ -68,6 +72,106 @@ a:hover {
 
 strong {
     font-weight: var(--font-weight-p-strng);
+}
+
+/* Components Library */
+
+.component-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    width: 100%;
+    height: 100%;
+}
+
+aside.components__sidebar {
+    flex-basis: 20%;
+    background-color: var(--color-cream);
+    padding-top: 2rem;
+    height: 100vh;
+    overflow-y: scroll;
+}
+
+aside a {
+    text-decoration: none;
+    text-underline-offset: 0;
+    margin-left: 1rem;
+    display: block;
+    color: var(--color-red);
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+}
+
+a.logo  {
+    text-decoration: none;
+    text-underline-offset: 0;
+    margin: 0;
+    text-transform: none;
+    margin-bottom: 0rem;
+}
+
+aside a:hover {
+    color: var(--color-black);
+}
+
+aside h1, aside h2, aside h3, aside a, aside.logo {
+    padding: .75rem 0rem .75rem 2rem;
+}
+
+section.components__section {
+    flex-basis: 80%;
+    width: 80%;
+    height: 100vh;
+    padding: 3rem;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.divider {
+    width: 100%;
+    border-color: var(--color-black);
+    border-bottom: solid 1px;
+    padding: 1rem 0rem 1rem 0rem;
+    margin-bottom: 1rem;
+    display: block;
+}
+
+.component {
+    max-width: initial;
+    padding: 2rem 0;
+}
+
+.component img {
+    max-width: initial;
+}
+
+.component__img {
+    border: solid 1px #ccc;
+    overflow-x: auto;
+}
+
+.component__code {
+    max-width: initial;
+    padding: 2rem 0;
+}
+
+h1 {
+    font-size: 1.75rem;
+}
+
+h2 {
+    font-size: 1.25rem;
+}
+
+h3 {
+    font-size: 1rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    text-transform: uppercase;
+    margin: 0;
+    line-height: 1.25;
 }
 
 /* Images */
@@ -272,97 +376,6 @@ figcaption {
 
 .button-red {
     fill: var(--color-red);
-}
-
-/* Components Library */
-
-aside {
-    width: 20%;
-    float: left;
-    background-color: var(--color-cream);
-    position: fixed;
-    padding-top: 2rem;
-    height: 100vh;
-    overflow-y: scroll;
-}
-
-aside a {
-    text-decoration: none;
-    text-underline-offset: 0;
-    margin-left: 1rem;
-    display: block;
-    color: var(--color-red);
-    font-weight: 600;
-    text-transform: uppercase;
-    margin-bottom: 1rem;
-}
-
-a.logo  {
-    text-decoration: none;
-    text-underline-offset: 0;
-    margin: 0;
-    text-transform: none;
-    margin-bottom: 0rem;
-}
-
-aside a:hover {
-    color: var(--color-black);
-}
-
-aside h1, aside h2, aside h3, aside a, aside.logo {
-    padding: .75rem 0rem .75rem 2rem;
-}
-
-.components_section {
-    width: 80%;
-    float: right;
-    padding: 3rem;
-}
-
-.divider {
-    width: 100%;
-    border-color: var(--color-black);
-    border-bottom: solid 1px;
-    padding: 1rem 0rem 1rem 0rem;
-    margin-bottom: 1rem;
-    display: block;
-}
-
-.component {
-    max-width: initial;
-    padding: 2rem 0;
-}
-
-.component img {
-    max-width: initial;
-}
-
-.component__img {
-    border: solid 1px #ccc;
-    overflow-x: auto;
-}
-
-.component__code {
-    max-width: initial;
-    padding: 2rem 0;
-}
-
-h1 {
-    font-size: 1.75rem;
-}
-
-h2 {
-    font-size: 1.25rem;
-}
-
-h3 {
-    font-size: 1rem;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    text-transform: uppercase;
-    margin: 0;
-    line-height: 1.25;
 }
 
 /* Site Headers */
