Validation clean up

--- a/components/index.html
+++ b/components/index.html
@@ -118,11 +118,11 @@
                     <img
                     srcset="img-ref/homepage-agency-ul.png 2x"
                     src="img-ref/homepage-agency-ul.png"
-                    alt="List">
+                    alt="Ordered List">
                     <img
                     srcset="img-ref/homepage-trust-ul.png 2x"
                     src="img-ref/homepage-trust-ul.png"
-                    alt="List">
+                    alt="Unordered List">
                 </div>
                 <div class="component__code">
                     <ul class="list--numbered">
@@ -375,7 +375,7 @@
                     <img
                         srcset="img-ref/homepage-contact-socials.png 2x"
                         src="img-ref/homepage-contact-socials.png"
-                        alt="">
+                        alt="Footer Social Links">
                 </div>
                 <div class="component__code">
                     <div class="content--social">
@@ -483,11 +483,11 @@
                     <img
                     srcset="img-ref/homepage-header-logo.png 2x"
                     src="img-ref/homepage-header-logo.png"
-                    alt="link normal">
+                    alt="Logo">
                     <img
                     srcset="img-ref/project-header-logo.png 2x"
                     src="img-ref/project-header-logo.png"
-                    alt="link normal">
+                    alt="Logo">
                 </div>
                 <div class="component__code">
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -554,11 +554,11 @@
                     <img
                     srcset="img-ref/homepage-work-logo.png 2x"
                     src="img-ref/homepage-work-logo.png"
-                    alt="link normal">
+                    alt="Logomark">
                     <img
                     srcset="img-ref/project-nav-logo.png 2x"
                     src="img-ref/project-nav-logo.png"
-                    alt="link normal">
+                    alt="Logomark">
                 </div>
                 <div class="component__code" style="width: 30%;">
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 384 450" style="enable-background:new 0 0 384 450;" xml:space="preserve" class="logomark">
@@ -722,7 +722,7 @@
                     <img
                         srcset="img-ref/homepage-production-image.png 2x"
                         src="img-ref/homepage-production-image.png"
-                        alt="">
+                        alt="Can-am car">
                 </div>
                 <div class="component__code" style="width: 70%">
                     <figure class="compimg compimg--prod">
@@ -742,7 +742,7 @@
                         <img
                         srcset="img-ref/homepage-production-link.png 2x"
                         src="img-ref/homepage-production-link.png"
-                        alt="">
+                        alt="Box Link">
                 </div>
                 <div class="component__code">
                     <div class="box-link--hider">
@@ -767,7 +767,7 @@
                     <img
                         srcset="img-ref/homepage-contact-bar.png 2x"
                         src="img-ref/homepage-contact-bar.png"
-                        alt="Contact Bar">
+                        alt="Footer Bar with links">
                 </div>
                 <div class="component__code">
                     <div class="content content--footer">
@@ -1020,7 +1020,7 @@
                         <img
                         srcset="img-ref/homepage-agency.png 2x"
                         src="img-ref/homepage-agency.png"
-                        alt="Work Section">
+                        alt="Agency Section">
                 </div>
                 <div class="component__code">
                     <article class="section section--agency">
