--- a/css/main.css
+++ b/css/main.css
@@ -649,7 +649,7 @@ ul {
     border-bottom: 1px solid var(--color-cream);
 }
 
-/* Project */
+/* Project Link */
 
 div.project-category {
     align-content: center;
@@ -701,7 +701,6 @@ a.project--link:hover > .project-category--normal {
     margin-bottom: 0rem;
 }
 
-
 .box-link {
     background-color: var(--color-cream);
     color: var(--color-red);
@@ -750,46 +749,6 @@ a.project--link:hover > .project-category--normal {
 .links__footer:hover {
     fill: var(--color-red);
 }
-
-/* Work Section */
-
-.section--work {
-    width: 100%;
-    height: 100vh;
-    padding: 2rem 0;
-    background-color: var(--color-cream);
-    border-bottom: 1px solid var(--color-black);
-    display: grid;
-    grid-template-columns: minmax(0,1fr) minmax(0,1fr) minmax(0,1fr);
-    grid-auto-flow: column;
-    align-content: space-between;
-    align-items: center;
-}
-
-.work-grid-1, .work-grid-2, .work-grid-3 {
-    justify-self: start;
-    grid-row: span 1;
-    grid-column: span 1;
-}
-
-.work-grid-4 {
-    grid-row: span 3;
-    grid-column: span 1;
-    justify-self: center;
-    align-self: center;
-}
-
-.work-grid-5, .work-grid-6, .work-grid-7 {
-    justify-self: end;
-    grid-row: span 1;
-    grid-column: span 1;
-    text-align: right;
-}
-
-.work-grid-right {
-    float: right;
-}
-
 
 /* Sections */
 
@@ -856,6 +815,8 @@ a.project--link:hover > .project-category--normal {
 .section--contact:hover {
     bottom: 0rem;
 }
+
+/* Section Content */
 
 .content {
     display: flex;
@@ -991,6 +952,44 @@ a.project--link:hover > .project-category--normal {
 .section--awards a {
     padding-top: 3rem;
     text-align: center;
+}
+
+/* Work Section */
+
+.section--work {
+    width: 100%;
+    height: 100vh;
+    background-color: var(--color-cream);
+    border-bottom: 1px solid var(--color-black);
+    display: grid;
+    grid-template-columns: minmax(0,1fr) minmax(0,1fr) minmax(0,1fr);
+    grid-auto-flow: column;
+    align-content: space-between;
+    align-items: center;
+}
+
+.work-grid-1, .work-grid-2, .work-grid-3 {
+    justify-self: start;
+    grid-row: span 1;
+    grid-column: span 1;
+}
+
+.work-grid-4 {
+    grid-row: span 3;
+    grid-column: span 1;
+    justify-self: center;
+    align-self: center;
+}
+
+.work-grid-5, .work-grid-6, .work-grid-7 {
+    justify-self: end;
+    grid-row: span 1;
+    grid-column: span 1;
+    text-align: right;
+}
+
+.work-grid-right {
+    float: right;
 }
 
 /* Production Section */
