--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@ html {
     margin: 0px;
     height: 100%;
     width: 100%;
+    scroll-behavior: smooth;
   }
 
   *, *:before, *:after {
@@ -72,6 +73,16 @@ a:hover {
 
 strong {
     font-weight: var(--font-weight-p-strng);
+}
+
+.main-site {
+    background-color: var(--color-cream);
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+.site-container {
+    padding: 0rem 4rem;
 }
 
 /* Components Library */
@@ -242,8 +253,8 @@ figure.compimg--insta img {
     bottom: 0;
     width: 100%;
     height: 100%;
-    padding: 1rem;
-    margin: 1rem;
+    padding: 0;
+    margin: auto;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -406,6 +417,10 @@ figcaption {
     color: var(--color-red);
 }
 
+.h-three--prod {
+    mix-blend-mode: difference;
+}
+
 .h-four {
     color: var(--color-black);
     font-size: var(--font-size-h4);
@@ -563,7 +578,6 @@ ul {
     opacity: 1;
 }
 
-
 /* Site Logos */
 
 .logo {
@@ -592,8 +606,9 @@ ul {
 .menu {
     display: flex;
     flex-direction: row;
+    line-height: 1;
     gap: 1rem;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
     width: 10%;
     color: var(--color-black);
@@ -654,7 +669,8 @@ ul {
 div.project-category {
     align-content: center;
     gap: .5rem;
-    height: 1.25rem;
+    height: 1.5rem;
+    width: fit-content;
 }
 
 .project-arrow {
@@ -753,7 +769,7 @@ a.project--link:hover > .project-category--normal {
 /* Sections */
 
 .section {
-    padding: 4rem;
+    padding: 4rem 0rem;
     margin: 0 auto;
 }
 
@@ -777,6 +793,7 @@ a.project--link:hover > .project-category--normal {
 .section--prod {
     background-color: var(--color-cream);
     padding-bottom: 0;
+    padding-top: 1rem;
 }
 
 .section--insta {
@@ -958,14 +975,17 @@ a.project--link:hover > .project-category--normal {
 
 .section--work {
     width: 100%;
-    height: 100vh;
+    height: 83vh;
     background-color: var(--color-cream);
     border-bottom: 1px solid var(--color-black);
     display: grid;
-    grid-template-columns: minmax(0,1fr) minmax(0,1fr) minmax(0,1fr);
+    grid-template-columns: minmax(0,1fr) .25fr minmax(0,1fr) .25fr minmax(0,1fr);
     grid-auto-flow: column;
     align-content: space-between;
     align-items: center;
+    padding-bottom: 5rem;
+    padding-top: 2rem;
+    margin-bottom: 0rem;
 }
 
 .work-grid-1, .work-grid-2, .work-grid-3 {
@@ -976,7 +996,7 @@ a.project--link:hover > .project-category--normal {
 
 .work-grid-4 {
     grid-row: span 3;
-    grid-column: span 1;
+    grid-column: 3 / 3;
     justify-self: center;
     align-self: center;
 }
@@ -984,12 +1004,22 @@ a.project--link:hover > .project-category--normal {
 .work-grid-5, .work-grid-6, .work-grid-7 {
     justify-self: end;
     grid-row: span 1;
-    grid-column: span 1;
+    grid-column: 5 / 5;
     text-align: right;
 }
 
 .work-grid-right {
     float: right;
+}
+
+.section--work__container {
+    position: relative;
+}
+
+.section--work__scroll {
+    position: absolute;
+    bottom: -3rem;
+    right: 4rem;
 }
 
 /* Production Section */
@@ -1004,7 +1034,7 @@ a.project--link:hover > .project-category--normal {
 
 .prod__grid-1 {
     grid-row: 1 / 1;
-    grid-column: 10 / 20;
+    grid-column: 10 / 21;
     align-self: start;
     justify-self: end;
 }
@@ -1015,7 +1045,7 @@ a.project--link:hover > .project-category--normal {
 }
 
 .prod__grid-3 {
-    grid-column: 14 / 20;
+    grid-column: 14 / 21;
     grid-row: 4 / 7;
 }
 
