--- a/css/main.css
+++ b/css/main.css
@@ -828,10 +828,11 @@ a.project--link:hover > .project-category--normal {
 
 .section--hider {
     width: 100%;
-    height: 75vh;
+    height: 80vh;
     overflow: hidden;
     background-color: var(--color-red);
-    margin-bottom: -7rem;
+    bottom: 0rem;
+    position: relative;
 }
 
 .section--contact {
@@ -841,9 +842,11 @@ a.project--link:hover > .project-category--normal {
     border: 2px solid var(--color-black);
     border-bottom: none;
     position: relative;
-    bottom: -22rem;
+    bottom: -38vh;
     transition: bottom 2s;
     z-index: 1;
+    padding: 6rem;
+    height: 100vh;
 }
 
 .section--contact:hover {
@@ -899,7 +902,7 @@ a.project--link:hover > .project-category--normal {
 
 .content--contact {
     padding-top: 2rem;
-    padding-bottom: 4rem;
+    padding-bottom: 5rem;
     border-bottom: 1px solid var(--color-black);
 }
 
@@ -915,6 +918,10 @@ a.project--link:hover > .project-category--normal {
 
 .content--contact a:hover {
     padding: 0;
+}
+
+.content--contact h2 {
+    text-align: center;
 }
 
 .content--contact h2:hover {
@@ -1110,5 +1117,18 @@ a.project--link:hover > .project-category--normal {
     .table__content figure {
         width: 300px;
         height: 300px;
+    }
+    .content--contact .button-container--inline-lg {
+        flex-basis: 12%;
+    }
+}
+
+@media screen and (max-width: 1500px) {
+    .content--contact h4 {
+        flex-basis: 60%;
+    }
+    :root {
+        --font-size-h3: 3.3rem;
+        --font-size-h4: 3rem;
     }
 }
